syntax = "proto3";

service PartServer {
  rpc read (ReadRequest) returns (ReadResponse) {}
  rpc set (SetRequest) returns (SetResponse) {}
}

message ReadRequest {
  bytes key = 1;
}

message ReadResponse {
  int64 value = 1;
  bool is_value = 2;
  bool is_error = 3;
  string error_message = 4;
}

message SetRequest {
  bytes key = 1;
  int64 value = 2;
}

message SetResponse {
  bool is_error = 1;
  string error_message = 4;
}
